# tr531x_multi_projects

./: .gitignore
sdk_root_dir/application/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/nfc/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/nfc/controller/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/nfc/tag/: CMakeLists.txt  nfc_ndef_msg.c  nfc_ndef_msg.h  nfc_t2t_text.c  nfc_text_record.c  nfc_text_record.h  nfc_uri_record.c  nfc_uri_record.h
sdk_root_dir/application/samples/peripheral/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/peripheral/adc/: CMakeLists.txt  Kconfig  adc_demo.c  adc_demo_inc.c
sdk_root_dir/application/samples/peripheral/amic/: CMakeLists.txt  Kconfig  amic.code-workspace  amic_demo.c
sdk_root_dir/application/samples/peripheral/blinky/: CMakeLists.txt  Kconfig  blinky_demo.c
sdk_root_dir/application/samples/peripheral/button/: CMakeLists.txt  Kconfig  button.c
sdk_root_dir/application/samples/peripheral/calendar/: CMakeLists.txt  calendar_demo.c
sdk_root_dir/application/samples/peripheral/can/: CMakeLists.txt  Kconfig  can_demo.c
sdk_root_dir/application/samples/peripheral/clocks/: CMakeLists.txt  Kconfig  clocks_demo.c
sdk_root_dir/application/samples/peripheral/dma/: CMakeLists.txt  Kconfig  dma_demo.c
sdk_root_dir/application/samples/peripheral/i2c/: CMakeLists.txt  Kconfig  i2c_master_demo.c  i2c_slave_demo.c
sdk_root_dir/application/samples/peripheral/i2s/: CMakeLists.txt  Kconfig  i2s_master_demo.c  i2s_slave_demo.c
sdk_root_dir/application/samples/peripheral/i2s_dma/: CMakeLists.txt  Kconfig  i2s_dma_master_demo.c  i2s_dma_slave_demo.c
sdk_root_dir/application/samples/peripheral/i2s_dma_lli/: CMakeLists.txt  Kconfig  i2s_dma_lli_master_demo.c  i2s_dma_lli_slave_demo.c
sdk_root_dir/application/samples/peripheral/keyscan/: CMakeLists.txt  keyscan_demo.c
sdk_root_dir/application/samples/peripheral/lpc/: CMakeLists.txt  Kconfig  lpc_gpio_wakeup_demo.c
sdk_root_dir/application/samples/peripheral/pdm/: CMakeLists.txt  Kconfig  pdm_demo.c
sdk_root_dir/application/samples/peripheral/pdm_amic/: CMakeLists.txt  Kconfig  pdm_amic_demo.c
sdk_root_dir/application/samples/peripheral/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_demo.c
sdk_root_dir/application/samples/peripheral/pwm/: CMakeLists.txt  Kconfig  pwm_demo.c
sdk_root_dir/application/samples/peripheral/qdec/: CMakeLists.txt  qdec_demo.c
sdk_root_dir/application/samples/peripheral/rtc/: CMakeLists.txt  Kconfig  rtc_demo.c
sdk_root_dir/application/samples/peripheral/sfc/: CMakeLists.txt  Kconfig  sfc_demo.c
sdk_root_dir/application/samples/peripheral/spi/: CMakeLists.txt  Kconfig  spi_master_demo.c  spi_slave_demo.c
sdk_root_dir/application/samples/peripheral/systick/: CMakeLists.txt  systick_demo.c
sdk_root_dir/application/samples/peripheral/tasks/: CMakeLists.txt  tasks.c
sdk_root_dir/application/samples/peripheral/tcxo/: CMakeLists.txt  tcxo_demo.c
sdk_root_dir/application/samples/peripheral/timer/: CMakeLists.txt  Kconfig  timer_demo.c
sdk_root_dir/application/samples/peripheral/uart/: CMakeLists.txt  Kconfig  uart_demo.c
sdk_root_dir/application/samples/peripheral/uart_dma_lli/: CMakeLists.txt  Kconfig  uart_dma_lli_common.c  uart_dma_lli_common.h  uart_dma_lli_master_demo.c  uart_dma_lli_slave_demo.c
sdk_root_dir/application/samples/peripheral/watchdog/: CMakeLists.txt  Kconfig  watchdog_demo.c
sdk_root_dir/application/samples/products/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/products/ble_uart/: CMakeLists.txt  Kconfig  ble_uart.c
sdk_root_dir/application/samples/products/lowpower/: CMakeLists.txt  lowpower.c  lowpower.h  pm_ble_hid_server.c  pm_ble_hid_server.h  pm_ble_server.c  pm_ble_server.h  pm_ble_server_adv.c  pm_ble_server_adv.h
sdk_root_dir/application/samples/products/rcu/: CMakeLists.txt  Kconfig
sdk_root_dir/application/samples/products/sle_multi_conn/: CMakeLists.txt  Kconfig  sle_multi_conn.c
sdk_root_dir/application/samples/products/sle_ota_dongle/: CMakeLists.txt  Kconfig  sle_ota_client.c  sle_ota_client.h  sle_ota_cmd.c  sle_ota_cmd.h  sle_ota_cmd_handler.c  sle_ota_cmd_handler.h  sle_ota_dongle.c  sle_ota_hid.c  sle_ota_hid.h
sdk_root_dir/application/samples/products/sle_uart/: CMakeLists.txt  Kconfig  board.json  sle_uart.c
sdk_root_dir/application/samples/public/: CMakeLists.txt  Kconfig  public_init.c  public_init.h
sdk_root_dir/application/samples/public/client/: client.c  client.h
sdk_root_dir/application/samples/public/msg/: msg.c  msg.h
sdk_root_dir/application/samples/public/server/: mouse_sle_charge_service.c  mouse_sle_charge_service.h  mouse_sle_dis_service.c  mouse_sle_dis_service.h  mouse_sle_hid_service.c  (+9 more)
sdk_root_dir/application/tr5310/standard/: CMakeLists.txt  main.c  startup.S
sdk_root_dir/application/tr5310p/: CMakeLists.txt
sdk_root_dir/application/tr5310p/standard/: CMakeLists.txt  main.c  startup.S
sdk_root_dir/application/tr5312l/standard/: main.h  startup.S
sdk_root_dir/application/tr5316/: CMakeLists.txt
sdk_root_dir/application/tr5316/standard/: startup.S
sdk_root_dir/application/ux/: CMakeLists.txt
sdk_root_dir/application/ux/ux_common/: CMakeLists.txt  ha_common.h  ux_config_common.h  ux_config_common_log.h  ux_config_tws.h  ux_manager_common.h  ux_manager_common_log.h  ux_multiple_device.h  ux_multiple_device_log.h  ux_product_interface.h  ux_secure.h  ux_state_common.h  ux_state_tws.h  ux_types.h
sdk_root_dir/application/ux/ux_commu/: CMakeLists.txt  ux_box_commu.h  ux_box_event.h  ux_box_log.h
sdk_root_dir/application/ux/ux_spp/: CMakeLists.txt  ux_spp_common.h  ux_spp_common_log.h  ux_spp_dev.h  ux_spp_header.h  ux_spp_intelligent.h  ux_spp_interface.h  ux_spp_ios.h  ux_spp_midware.h  ux_spp_resend.h  ux_spp_tool.h  ux_spp_tws.h
sdk_root_dir/middleware/services/: CMakeLists.txt  Kconfig
sdk_root_dir/protocol/bt/host/: CMakeLists.txt  Kconfig  KconfigAdapter.cmake
sdk_root_dir/protocol/slp/: CMakeLists.txt  tr531x.cmake
(+1832 files in other folders)
