#===============================================================================
# @brief    cmake file
# Copyright (c) Triductor 2022-2022. All rights reserved.
#===============================================================================
option (RUN_ON_LINUX "Dts use C PUBLIC LIB" OFF)

set(CMAKE_EXPORT_COMPILE_COMMANDS TRUE)

if(NOT ${RUN_ON_LINUX})
    set(BGTP_DEVICE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
endif()

# 定义BGTP_PROJECT是为了将各平台不同方式项目名称定义转化为统一的bgtp内部的定义, 防止平台修改定义方式后bgtp内部散弹式修改cmake文件
# 切换CodeHub源后的项目，平台采用全新的货架化架构，编译系统套件采用CFBB编译系统，与原gerrit上的编译套件不兼容
if(${CHIP} MATCHES "^tr5312$")
    set(BGTP_PROJECT "tr5312")
    set(BGTP_OS_MODE "LITEOS")
    include(tr5312.cmake)
elseif(${PROJECT_NAME} MATCHES "73")
    set(BGTP_PROJECT "tr5330")
    get_property(TARGET_DEFINES GLOBAL PROPERTY TARGET_DEFINES)
    if("-DBGLE_ATE" IN_LIST TARGET_DEFINES)
        include(tr5330_ate.cmake)
    else()
        set(BGTP_OS_MODE "NONOS")
        include(tr5330.cmake)
    endif()
elseif(${CHIP_FAMILY} MATCHES "tr531x")
    set(BGTP_PROJECT "tr5310p")
    set(BGTP_OS_MODE "LITEOS")
    include(tr5310p.cmake)
elseif(${CHIP} MATCHES "tr5336")
    # 有BGLE_ATE宏定义， 则编译ATE版本
    if("BGLE_ATE" IN_LIST DEFINES)
        include(tr5336_ate.cmake)
    else()
        set(BGTP_PROJECT "tr5336")
        set(BGTP_OS_MODE "LITEOS")
        include(tr5336.cmake)
    endif()
    # tr5336代码正常编译作为静态库, 供sparklyzer调用
    if("SPARKLYZER_ACTIVATED" IN_LIST DEFINES)
        option (SPARKLYZER "" ON)
        include(sparklyzer.cmake)
    endif()
elseif(${CHIP} MATCHES "trswgxx")
    # 有BGLE_ATE宏定义， 则编译ATE版本
    if("BGLE_ATE" IN_LIST DEFINES)
        include(trswgxx_ate.cmake)
    else()
        set(BGTP_PROJECT "trswgxx")
        set(BGTP_OS_MODE "NONOS")
        include(trswgxx.cmake)
    endif()
elseif(${project_name} MATCHES "mp17c")
    set(BGTP_PROJECT "1107C")
    set(BGTP_OS_MODE "LITEOS")
    include(hi1107.cmake)
elseif(${CHIP} MATCHES "sw39")
    set(BGTP_PROJECT "sw39")
    set(BGTP_OS_MODE "LITEOS")
    include(sw39.cmake)
elseif(${CHIP} MATCHES "sw21")
    set(BGTP_PROJECT "sw21")
    set(BGTP_OS_MODE "LITEOS")
    include(sw21.cmake)
elseif(${CHIP} MATCHES "socmn2")
    set(BGTP_PROJECT "sw72")
    set(BGTP_OS_MODE "LITEOS")
    include(sw72.cmake)
elseif(${project_name} MATCHES "mp12")
    set(BGTP_PROJECT "mp12")
    set(BGTP_OS_MODE "LITEOS")
    include(mp12.cmake)
endif()
